--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
             <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="action/index.html/" class="nav-link">Action</a>
+            <a href="action/index.html" class="nav-link">Action</a>
         </li>
         <li class="nav-item">
-            <a href="adventure/index.html/" class="nav-link">Adventure</a>
+            <a href="adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
-            <a href="bike/" class="nav-link">Bike</a>
+            <a href="bike/index.html" class="nav-link">Bike</a>
         </li>        
 	    <li class="nav-item">
             <a href="game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
@@ -267,7 +267,7 @@
                 <li><a class="dropdown-item" href="idle/index.html">Idle</a></li>
                 <li><a class="dropdown-item" href="shooting/index.html">Shooting</a></li>
                 <li><a class="dropdown-item" href="skill/index.html/">Skill</a></li>
-                <li><a class="dropdown-item" href="sport/index.html/">Sport</a></li>
+                <li><a class="dropdown-item" href="sport/index.html">Sport</a></li>
                 <li><a class="dropdown-item" href="classroom6x/index.html">Classroom 6x</a></li>
                 <li><a class="dropdown-item" href="2-player-games/index.html">2 Player Games</a></li>
 		<li><a class="dropdown-item" href="io-games/index.html">.io Games</a></li>
