--- a/game/fortride-open-world.html
+++ b/game/fortride-open-world.html
@@ -1336,7 +1336,7 @@
 <script src="../assets/js/Adm.js"></script>
         <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/fortride-open-world/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https:classroom-6x-online.github.io/g7/fortride-open-world" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
