--- a/game/burnout-drift-hilltop.html
+++ b/game/burnout-drift-hilltop.html
@@ -1310,7 +1310,7 @@
    </body>
    <script>
       function loadMainGame(){
-      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/burnout-drift-hilltop/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g3/burnout-drift-hilltop/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
       document.getElementById("loadgame").innerHTML = html;
       document.getElementById('loadgame').scrollIntoView();
       }
