--- a/game/swipe-fighter-heroes.html
+++ b/game/swipe-fighter-heroes.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Swipe Fighter Heroes Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+       <meta name="description" content=" Battle in style with Swipe Fighter Heroes! Customize your fighter, master quick swipes, and dominate opponents in fast-paced, action-packed duels.">
        
         <meta name="title" content="Swipe Fighter Heroes">
         <meta name="keywords" content="Swipe Fighter Heroes Game, Action Games, ActionGames, Action Games Pc, ActionGamesPc, 
@@ -15,7 +15,7 @@
         <meta name="news_keywords" content="swipe fighter heroes crazy games
         poki
         poki fighting games
-        swipe fighter heroes unblocked
+        Swipe Fighter Heroes Unblocked
         fighting games online
         poki boxing games
         poki game 
@@ -924,7 +924,7 @@
         <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/swipe-fighter-heroes/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g20/swipe-fighter-heroes/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
