--- a/game/skiing-fred.html
+++ b/game/skiing-fred.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Skiing Fred Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content="Skiing Fred is a fast-paced action game where you race down deadly slopes, dodge obstacles, and escape the Grim Reaper in thrilling downhill adventures.">
         
         <meta name="title" content="Skiing Fred">
         <meta name="keywords" content="Skiing Fred Game, Running Game, Runninggame, Running Games, RunningGames
