--- a/game/running-fred.html
+++ b/game/running-fred.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Running Fred Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+       <meta name="description" content=" Running Fred is a thrilling endless runner where you dodge traps, jump over obstacles, and survive deadly challenges in fast-paced 3D action.">
         
         <meta name="title" content="Running Fred">
         <meta name="keywords" content="Running Fred Game, Running Game, Runninggame, Running Games, RunningGames
@@ -17,18 +17,18 @@
         free running game 
         running game meaning">
         <meta name="news_keywords" content="running fred lite
-        running fred unblocked
+        running Fred unblocked
         running fred y8
-        running fred online
-        running fred 2
-        running fred 3
+        running Fred online
+        running Fred 2
+        running Fred 3
         running fred pc
         running fred - free
-        old running fred">
+        old running Fred">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/running-fred.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
