--- a/game/car-rush.html
+++ b/game/car-rush.html
@@ -1323,7 +1323,7 @@
    </body>
    <script>
       function loadMainGame(){
-      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/car-rush/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g4/car-rush/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
       document.getElementById("loadgame").innerHTML = html;
       document.getElementById('loadgame').scrollIntoView();
       }
