--- a/game/car-rush.html
+++ b/game/car-rush.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta property="og:image" content="https://faf-games.github.io/assets/img/carrush/car-rush.webp">
+      <meta property="og:image" content="https://faf-games.github.io/assets/img/carrush/car-rush.webp">
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="Car Rush is a thrilling racing game where you speed through highways, dodge traffic, and reach the finish line before time runs out. Enjoy fast, smooth, and fun driving action.">
 	      
       <meta name="keyword" content="car rush game
       car rush math
