--- a/game/car-simulator-arena.html
+++ b/game/car-simulator-arena.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content=" Car Simulator Arena lets you drive, crash, and perform stunts in an open-world arena. Choose your car, explore freely, and experience epic 3D driving fun online.">
       <meta name="keyword" content="  car simulator arena poki
       car simulator arena friv
       car simulator arena 2
@@ -1310,7 +1310,7 @@
    </body>
    <script>
       function loadMainGame(){
-      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/car-simulator-arena/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g4/car-simulator-arena/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
       document.getElementById("loadgame").innerHTML = html;
       document.getElementById('loadgame').scrollIntoView();
       }
