--- a/game/car-drift-racers-2.html
+++ b/game/car-drift-racers-2.html
@@ -6,7 +6,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="Car Drift Racers 2 is an exciting drifting game where you race through sharp turns, master your car control, and show off epic drifts to become the ultimate racer.">
 	      
       <meta name="keyword" content="car drift game
       car drift racing 2 
@@ -1325,7 +1325,7 @@
    </body>
    <script>
       function loadMainGame(){
-      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/car-drift-racers-2/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g4/car-drift-racers-2/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
       document.getElementById("loadgame").innerHTML = html;
       document.getElementById('loadgame').scrollIntoView();
       }
