--- a/game/burnout-drift-hilltop.html
+++ b/game/burnout-drift-hilltop.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta property="og:image" content="https://faf-games.github.io/assets/img/burnoutdrifthilltop/burnout-drift-hilltop.webp">
+      <meta property="og:image" content="https://faf-games.github.io/assets/img/burnoutdrifthilltop/burnout-drift-hilltop.webp">
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content=" Burnout Drift Hilltop is a realistic drifting game where you race on mountain roads, earn points for stylish drifts, and customize your car for the perfect ride.">
 	      
       <meta name="keyword" content="burnout drift 2
       burnout drift: hilltop unblocked
