--- a/game/basketball-legends-2020.html
+++ b/game/basketball-legends-2020.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Basketball Legends - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+       <meta name="description" content="Basketball Legends is a fun 2-player basketball game where you can play as famous stars, perform epic dunks, and compete in fast-paced matches to become the ultimate legend.">
             
         <meta name="title" content="Basketball Legends 2020">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free ">
