--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content=" Unblocked Games G+ for Chromebook - Play a wide range of g+ games you can play at school, work, or anywhere. No downloads needed, click and start playing on FAF games.">
+    <meta name="description" content=" Unblocked Games G+ for Chromebook - Play a wide range of unblocked games you can play at school, work, or anywhere. No downloads needed, click and start playing on FAF games.">
     <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
     <meta name="author" content="FAF Games Team">
 
@@ -373,6 +373,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				        <div class="games-desc">
 				            <h3><a href="./game/ragdoll-hit.html">Ragdoll Hit</a></h3>
 				            <p class="game-meta">Advanture | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
+								    <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/baseball-9.html">
+				                <img src="/assets/img/baseball-9/baseball-9.webp" alt="Baseball 9" title="Baseball 9" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="./game/baseball-9.html">Baseball 9</a></h3>
+				            <p class="game-meta">Sports | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
 				</div>
