--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 		<li><a class="dropdown-item" href="car/index.html">Car</a></li>
                 <li><a class="dropdown-item" href="idle/index.html">Idle</a></li>
                 <li><a class="dropdown-item" href="shooting/index.html">Shooting</a></li>
-                <li><a class="dropdown-item" href="skill/index.html/">Skill</a></li>
+                <li><a class="dropdown-item" href="skill/index.html">Skill</a></li>
                 <li><a class="dropdown-item" href="sport/index.html">Sport</a></li>
                 <li><a class="dropdown-item" href="classroom6x/index.html">Classroom 6x</a></li>
                 <li><a class="dropdown-item" href="2-player-games/index.html">2 Player Games</a></li>
