--- a/game/football-bros.html
+++ b/game/football-bros.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Football Bros Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content=" Football Bros is a fun and fast-paced soccer game where you team up with your bro to score amazing goals! Challenge friends, show off your football skills, and enjoy smooth, unblocked gameplay anytime, anywhere.">
         
             
         <meta name="title" content="Street Ball Star">
@@ -760,7 +760,7 @@
          <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://footballbrosgame.org/game/football-bros/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g7/football-bros/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
