--- a/game/football-bros.html
+++ b/game/football-bros.html
@@ -9,7 +9,7 @@
         <meta name="description" content=" Football Bros is a fun and fast-paced soccer game where you team up with your bro to score amazing goals! Challenge friends, show off your football skills, and enjoy smooth, unblocked gameplay anytime, anywhere.">
         
             
-        <meta name="title" content="Street Ball Star">
+        <meta name="title" content="Football Bros">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free ">
         <meta name="news_keywords" content="Football Bros y8
         Football Bros unblocked
