--- a/game/football-legends.html
+++ b/game/football-legends.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Football Legends Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content="Football Legends lets you play epic 1v1 and 2-player soccer matches with your favorite stars! Show off your skills, score stunning goals, and enjoy fast-paced, unblocked football fun anywhere.">
             
         <meta name="title" content="Football Legends">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free ">
