--- a/game/smash-karts.html
+++ b/game/smash-karts.html
@@ -7,7 +7,7 @@
                <meta name="viewport" content="width=device-width, initial-scale=1">
                <meta http-equiv="X-UA-Compatible" content="IE=edge">
                <title>Smash Karts Unblocked - Play Online for Free | FAF Games</title>
-               <meta name="description" content="
+               <meta name="description" content="Smash Karts is a fast-paced multiplayer racing and battle game where you drive, drift, and blast your opponents with crazy weapons! Compete online, earn XP, unlock characters, and become the ultimate kart champion.">
                 
               <meta name="keywords" content="
               smash karts poki 
