--- a/game/city-rider.html
+++ b/game/city-rider.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="City Rider lets you explore open-world city streets in powerful cars. Drive freely, test your drifting skills, or race through realistic environments in this fun 3D driving simulator.">
             
       <meta name="keyword" content="  city rider puma
       city rider jeux
@@ -1324,7 +1324,7 @@
 <script src="../assets/js/Adm.js"></script>
     <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/city-rider/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g4/city-rider/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
