--- a/game/burnin-rubber-5-xs.html
+++ b/game/burnin-rubber-5-xs.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="Burnin Rubber 5 XS is an explosive car combat racing game packed with action. Race, drift, and blast your rivals using powerful weapons in high-speed battles across stunning tracks.">
 	      
       <meta name="keyword" content="  burnin rubber 5 xs download
       burnin' rubber 5 mods
@@ -1324,7 +1324,7 @@
    </body>
    <script>
       function loadMainGame(){
-      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/burnin-rubber-5-xs/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+      var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g3/burnin-rubber-5-xs/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
       document.getElementById("loadgame").innerHTML = html;
       document.getElementById('loadgame').scrollIntoView();
       }
