--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -10,8 +10,8 @@
       <meta name="keyword" content="  demolition derby crash racing friv
       demolition derby crash racing online
       demolition derby crash racing game
-      demolition derby 3
-      demolition derby 2
+      Demolition Derby 3
+      Demolition Derby 2
       demolition derby: crash racing
       demolition derby crash racing unblocked
       demolition derby crash racing free online">
@@ -1334,7 +1334,7 @@
 <script src="../assets/js/Adm.js"></script>
     <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://6x-classroom.io/class412/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https:/classroom-6x-online.github.io/g5/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
