--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -6,7 +6,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="Demolition Derby Crash Racing puts you in the arena for intense car battles! Smash, crash, and destroy rival vehicles to become the ultimate derby champion. Drive fast, hit hard, and survive the chaos!">
       <meta name="keyword" content="  demolition derby crash racing friv
       demolition derby crash racing online
       demolition derby crash racing game
