--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -1334,7 +1334,7 @@
 <script src="../assets/js/Adm.js"></script>
     <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https:/classroom-6x-online.github.io/g5/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://classroom-6x-online.github.io/g5/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
