--- a/game/tank-trouble.html
+++ b/game/tank-trouble.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Tank Trouble Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+         <meta name="description" content=" Tank Trouble – one of the most exciting unblocked multiplayer games online! Battle your friends or AI tanks in explosive maze arenas. Play instantly at Unblocked Games WTF — no downloads, no limits, pure tank fun!">
         
         <meta name="title" content="Tank Trouble">
         <meta name="keywords" content="shooting game online
@@ -18,13 +18,13 @@
         shooting games io
         shooting games for android">
         <meta name="news_keywords" content="tank trouble 2
-        tank trouble 4
-        tank trouble online
-        tank trouble unblocked
-        tank trouble poki
-        tank trouble 3
-        tank trouble y8
-        tank trouble 1">
+        Tank Trouble 4
+        Tank Trouble Online
+        Tank Trouble Unblocked
+        Tank Trouble Poki
+        Tank Trouble 3
+        Tank Trouble Y8
+        Tank Trouble 1">
        <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/tank-trouble.html" />
 	<meta name="publisher" content="FAF Games Team">
@@ -360,21 +360,7 @@
                 <div class="row">
 
                     <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot("/23079347111/Display", [970, 250], "div-gpt-ad-1761501331622-0").addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
-<!-- /23079347111/Display -->
-<div id="div-gpt-ad-1761501331622-0" style="min-width: 970px; min-height: 250px;">
-  <script>
-    googletag.cmd.push(function() { googletag.display("div-gpt-ad-1761501331622-0"); });
-  </script>
-</div>
+
                    <div class="col-12">
                       <div class="games-details-banner">
                          <div class="row">
@@ -394,7 +380,7 @@
           <div class="container">
 
                <div class="article-header">
-        <h1>Tank Trouble - Unblocked</h1>
+        <h1>Tank Trouble Unblocked</h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
