--- a/index.html
+++ b/index.html
@@ -302,16 +302,7 @@
 <ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '1aeb8026b04786045fe3475334214b85',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//observeshaken.com/1aeb8026b04786045fe3475334214b85/invoke.js"></script>
+
 
 
 
@@ -1270,6 +1261,20 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
 
 								   
                         </div>
+
+								  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
+<script type="text/javascript">
+	atOptions = {
+		'key' : '1aeb8026b04786045fe3475334214b85',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//observeshaken.com/1aeb8026b04786045fe3475334214b85/invoke.js"></script>
+									  </div></div>
+						
 
 <h2>Recommended Games for You </h2>
 
