--- a/index.html
+++ b/index.html
@@ -297,12 +297,16 @@
             <div class="row">
 		
 		  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359" crossorigin="anonymous"></script>
-<!-- Banner ads -->
-<ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
-<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359"
+     crossorigin="anonymous"></script>
+<!-- banner home -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:750px;height:300px"
+     data-ad-client="ca-pub-5305579698272359"
+     data-ad-slot="8334674293"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 
