--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -522,6 +522,8 @@ dl dd {
   }
 }
 </script>
+		<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script> <script>   window.googletag = window.googletag || { cmd: [] }; var anchorSlot; googletag.cmd.push(function () { anchorSlot = googletag.defineOutOfPageSlot('/21849154601,23079347111/Ad.Plus-Anchor', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR); anchorSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices(); googletag.display(anchorSlot);  }); setInterval(function(){googletag.pubads().refresh([anchorSlot]);}, 30000);  </script>
+	</head>
 
           <!-- Custom Cursor End -->
         <!-- Header Area Start -->
