--- a/index.html
+++ b/index.html
@@ -369,6 +369,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
 				    </div>
 				</div>
 				<!-- end game item -->
+								   								    <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/steal-a-brainrot.html">
+				                <img src="/assets/img/steal-a-brainrot/steal-a-brainrot.webp" alt="Steal a Brainrot Original 3D" title="Steal a Brainrot Original 3D" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="./game/steal-a-brainrot.html">Steal a Brainrot Original 3D</a></h3>
+				            <p class="game-meta">Advanture | Desktop | Theif</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 								    <!-- start game item -->
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
