--- a/game/steal-a-brainrot.html
+++ b/game/steal-a-brainrot.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
     <html lang="en-US">
     <head>
-    <meta property="og:image" content="https://faf-games.github.io/assets/img/badicecream3/bad-ice-cream-3.png">
+    <meta property="og:image" content="https://faf-games.github.io/assets/img/steal-a-brainrot/steal-a-brainrot.webp">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Steal a Brainrot Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+     <meta name="description" content="Steal a Brainrot Original 3D — a chaotic 3D stealth-action game. Sneak, steal, and outsmart enemies in fast-paced levels with clever gadgets and intense chases.">
        
             
         <meta name="title" content="Steal a Brainrot Original 3D, Steal a Brainrot Unblocked">
