--- a/game/steal-a-brainrot.html
+++ b/game/steal-a-brainrot.html
@@ -863,7 +863,7 @@
          <script>
             function loadMainGame()
             {
-                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://trafficrally.io/steal-brainrot-online.embed" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://st.8games.net/7/8g/igra-ukradi-brejnrot-100-original/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                   document.getElementById("loadgame").innerHTML = html;
                   document.getElementById('loadgame').scrollIntoView();
             }
