--- a/game/steal-a-brainrot.html
+++ b/game/steal-a-brainrot.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Steal a Brainrot Unblocked - Play Online for Free | FAF Games</title>
-     <meta name="description" content="Steal a Brainrot Original 3D — a chaotic 3D stealth-action game. Sneak, steal, and outsmart enemies in fast-paced levels with clever gadgets and intense chases.">
+     <meta name="description" content="Steal a Brainrot Original 3D - a chaotic 3D stealth-action game. Sneak, steal, and outsmart enemies in fast-paced levels with clever gadgets and intense chases.">
        
             
         <meta name="title" content="Steal a Brainrot Original 3D, Steal a Brainrot Unblocked">
