--- a/game/tunnel-rush.html
+++ b/game/tunnel-rush.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Tunnel Rush Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content="Tunnel Rush is a fast-paced 3D running game where you dodge obstacles through neon tunnels at high speed. Test your reflexes, survive endless levels, and enjoy thrilling, action-packed gameplay online for free." />
        
         <meta name="publisher" content="FAF Games Team">
         <meta name="robots" content="index, follow">
@@ -1232,7 +1232,7 @@
     <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://faf-games.github.io/f/tunnel-rush" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g20/tunnel-rush/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
