--- a/game/eggycar/index.html
+++ b/game/eggycar/index.html
@@ -5,9 +5,10 @@
     <meta name="description" content="Play Eggy Car Unblocked - ClassRoom6x online for free at FAF Games! Enjoy safe and fun unblocked games anywhere, no downloads needed, just click and start playing now.">
     <meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Eggy Car Unblocked - ClassRoom6x</title>
+	<title>Eggy Car Unblocked </title>
 	<script type="text/javascript" src="/cloak.js"></script>
-  <meta name="website" content="classroom6x.gitlab.io" />
+  <meta name="website" content="faf-games.github.io" />
+  <meta name="robots" content="nofollow, noindex" /> 
 	<!-- Standardised web app manifest -->
 	<link rel="manifest" href="appmanifest.json" />
 	
