--- a/game/pacman/index.html
+++ b/game/pacman/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="description" content="Play Pac-Man online for free at FAF Games! Enjoy safe and fun unblocked games anywhere, no downloads needed, just click and start playing now.">
-
+<meta name="robots" content="nofollow, noindex" />
     <title>Pac-Man</title>
     <!-- last updated: Sun May 14 21:10:27 PDT 2023 -->
     <!-- Lock viewport on mobile devices. -->
