--- a/game/slopegame/index.html
+++ b/game/slopegame/index.html
@@ -7,14 +7,7 @@
     <script>
         var gameInstance = UnityLoader.instantiate("gameContainer", "Build/slope.json", { onProgress: UnityProgress, Module: { onRuntimeInitialized: function() { UnityProgress(gameInstance, "complete") } } });
     </script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag("js", new Date());
-  gtag("config", "G-6BPGNZNTLZ");
-</script>
+ <meta name="robots" content="nofollow, noindex" />
 </head>
 <body style="margin: 0; overflow: hidden;">
     <div class="webgl-content">
