--- a/game/blockblast/index.html
+++ b/game/blockblast/index.html
@@ -10,14 +10,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag("js", new Date());
-  gtag("config", "G-6BPGNZNTLZ");
-</script>
+ <meta name="robots" content="nofollow, noindex" />
   </head>
   <body>
     <div id="unity-container">
