--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content=" Unblocked Games on FAF Games lets you play free online unblocked games premium or unbanned G+ games, safely at school or work. Access top action, racing, and sports that work anytime, anywhere!">
+    <meta name="description" content=" Unblocked Games on FAF Games lets you play free online unblocked games premium or unbanned G+, safely at school or work. Access top action, racing, and sports that work anytime, anywhere!">
     <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
     <meta name="author" content="FAF Games Team">
 
