--- a/game/idle-breakout.html
+++ b/game/idle-breakout.html
@@ -6,7 +6,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Idle Breakout Unblocked - Play Online for Free | FAF Games</title>
-               <meta name="description" content=" Play Idle Breakout Unblocked online — a modern twist on the classic brick breaker game. Click to destroy bricks, earn cash, and upgrade powerful balls to automate your progress. Build your strategy, unlock upgrades, and see how far you can go in this addictive idle clicker game!">
+               <meta name="description" content=" Play Idle Breakout Unblocked — a modern twist on the classic brick breaker game. Click to destroy bricks, earn cash, and upgrade powerful balls to automate your progress. Build your strategy, unlock upgrades, and see how far you can go in this addictive idle clicker game!">
                     
         	   <meta name="keywords" content="Idle Breakout Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, Idle Games Online, IdleGamesOnline, Idle Games Free, IdleGamesFree">
                <meta name="news_keywords" content="Idle Breakout unblocked
@@ -361,19 +361,6 @@
 <!-- Banner ads -->
 <ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359" crossorigin="anonymous"></script>
-<!-- Banner ads -->
-<ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
-<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359" crossorigin="anonymous"></script>
-<!-- Banner ads -->
-<ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
-<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359" crossorigin="anonymous"></script>
-<!-- Banner ads -->
-<ins class="adsbygoogle" style="display:inline-block;width:970px;height:250px" data-ad-client="ca-pub-5305579698272359" data-ad-slot="7442749744"></ins>
-<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
 				
                               </div>
                            </div>
