--- a/game/slope.html
+++ b/game/slope.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Slope Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content=" Play Slope Unblocked online for free and race through endless 3D tunnels at high speed. Control the rolling ball, dodge obstacles, and test your reflexes in this fast-paced unblocked arcade game.”>
         
         <meta name="title" content="Slope">
         <meta name="keywords" content="Slope Game, Running Game, Runninggame, Running Games, RunningGames
