--- a/index.html
+++ b/index.html
@@ -299,9 +299,11 @@
      crossorigin="anonymous"></script>
 <!-- banner home -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:750px;height:300px"
+     style="display:block"
      data-ad-client="ca-pub-5305579698272359"
-     data-ad-slot="8334674293"></ins>
+     data-ad-slot="8334674293"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
