--- a/index.html
+++ b/index.html
@@ -181,6 +181,83 @@
             background-color: #793202;
         }
 
+
+		  .article-container {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 48px 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  line-height: 1.8;
+  color: #e5e7eb;
+}
+
+.article-container h1 {
+  font-size: 36px;
+  font-weight: 800;
+  margin-bottom: 24px;
+  color: #f97316;
+}
+
+.article-container h2 {
+  font-size: 26px;
+  font-weight: 700;
+  margin-top: 48px;
+  margin-bottom: 16px;
+  color: #ffffff;
+}
+
+.article-container h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 32px;
+  margin-bottom: 12px;
+  color: #fbbf24;
+}
+
+.article-container p {
+  margin-bottom: 18px;
+  font-size: 16px;
+  color: #d1d5db;
+}
+
+.article-container ul,
+.article-container ol {
+  margin: 16px 0 24px 20px;
+}
+
+.article-container li {
+  margin-bottom: 10px;
+}
+
+.article-container a {
+  color: #f97316;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.article-container a:hover {
+  text-decoration: underline;
+}
+
+.article-container strong {
+  color: #ffffff;
+}
+
+@media (max-width: 768px) {
+  .article-container {
+    padding: 32px 16px;
+  }
+
+  .article-container h1 {
+    font-size: 30px;
+  }
+
+  .article-container h2 {
+    font-size: 22px;
+  }
+}
+
+
   </style>
 		<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
@@ -206,6 +283,48 @@
   }
 }
 </script>
+
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Do unblocked games work on Chromebooks?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, most unblocked games are browser-based and run smoothly on Chromebooks without downloads or special permissions."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Are unblocked games free to play?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, all unblocked games on faf-games.github.io are free to play directly in the browser."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Do I need to download anything to play unblocked games?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "No downloads are required. All unblocked games run directly in your web browser."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Are unblocked games safe at school?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Unblocked games are safe when played on trusted sites that avoid downloads, pop-ups, and personal data collection."
+      }
+    }
+  ]
+}
+</script>
+
 
 	<script data-cfasync="false">
   window.ramp = window.ramp || {};
@@ -1333,7 +1452,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
             <div class="row">		    
                 <div class="col-12">
         
- 
+ <article class="article-container">
 
   <p>
     Finding fun games that actually work at school isn’t always easy. Between network filters, blocked downloads, and limited devices, most gaming sites simply don’t load. That is exactly why <strong>unblocked games</strong> exist, simple, browser-based games designed to run smoothly on school networks and Chromebooks.
@@ -1515,7 +1634,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
 
   <p><strong>Can unblocked games stop working later?</strong><br>
   School filters can change, but browser-based games are generally the most reliable option.</p>
-
+ </article>
 		</div>
 
 
