--- a/index.html
+++ b/index.html
@@ -1519,7 +1519,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
       <a href="/game/basketball-bros.html">Basketball Bros</a> – A classic sports game with quick one-on-one action.
     </li>
     <li>
-      <a href="/game/moto-x3m.html">Moto X3M</a> – A bike stunt game with smooth controls and challenging levels.
+      <a href="/game/moto-x3m-bike-race.html">Moto X3M</a> – A bike stunt game with smooth controls and challenging levels.
     </li>
     <li>
       <a href="/game/slope.html">Slope</a> – A fast reflex game that tests focus and reaction time.
