--- a/index.html
+++ b/index.html
@@ -1455,8 +1455,12 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
  <article class="article-container">
 
   <p>
-    Finding fun games that actually work at school isn’t always easy. Between network filters, blocked downloads, and limited devices, most gaming sites simply don’t load. That is exactly why <strong>unblocked games</strong> exist, simple, browser-based games designed to run smoothly on school networks and Chromebooks.
+    Finding fun games that actually work at school isn’t always easy. Between network filters, blocked downloads, and limited devices, most gaming sites simply don’t load. That is exactly why <a href="https://faf-games.github.io/"><strong>Unblocked Games</strong></a> exist, simple, browser-based games designed to run smoothly on school networks and Chromebooks.
   </p>
+
+	 <p>
+FAF Games is a trusted hub for <strong>unblocked games</strong> that work at school, on Chromebooks, and on restricted networks.
+</p>
 
   <p>
     At <a href="https://faf-games.github.io/">FAF Games</a>, the goal is straightforward: provide safe, fast, and reliable <strong>unblocked games</strong> that work without downloads, sign-ups, or risky redirects.
@@ -1511,9 +1515,6 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
     </li>
     <li>
       <a href="/game/tiny-fishing.html">Tiny Fishing</a> – A relaxing idle fishing game great for short breaks.
-    </li>
-    <li>
-      <a href="/game/stickman-archero-fight.html">Stickman Archero Fight</a> – Action-packed gameplay with fast rounds.
     </li>
     <li>
       <a href="/game/basketball-bros.html">Basketball Bros</a> – A classic sports game with quick one-on-one action.
@@ -1576,7 +1577,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
   <h2>Are Unblocked Games Safe?</h2>
 
   <p>
-    Yes — when you choose the right website.
+    Yes, when you choose the right website.
   </p>
 
   <ul>
@@ -1587,14 +1588,14 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
   </ul>
 
   <p>
-    At <strong>faf-games.github.io</strong>, unblocked games are playable directly in the browser with no extra steps.
+    At <strong>FAF Games</strong>, unblocked games are playable directly in the browser with no extra steps.
   </p>
 
-  <h2>How to Play Unblocked Games on faf-games.github.io</h2>
+  <h2>How to Play Unblocked Games on FAF Games</h2>
 
   <ol>
     <li>Choose a game from the site</li>
-    <li>Click play — no registration needed</li>
+    <li>Click play no registration needed</li>
     <li>Use keyboard or mouse controls</li>
     <li>Enjoy fullscreen gameplay instantly</li>
   </ol>
@@ -1608,7 +1609,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
     <li>Avoid third-party links outside the site</li>
   </ul>
 
-  <h2>Why Choose faf-games.github.io?</h2>
+  <h2>Why Choose FAF Games?</h2>
 
   <p>
     This site focuses on quality over quantity. Each game and article is curated with performance, usability, and accessibility in mind.
@@ -1630,7 +1631,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games </st
   Yes, all games on this site are free to play.</p>
 
   <p><strong>Do I need to download anything?</strong><br>
-  No downloads are required. Everything runs directly in your browser.</p>
+  You don't need to download anything. Everything runs directly in your browser.</p>
 
   <p><strong>Can unblocked games stop working later?</strong><br>
   School filters can change, but browser-based games are generally the most reliable option.</p>
